--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "graphql-request": "^6.1.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
