feat: Add slider, correct styles

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "codegen": "graphql-codegen --config ./lib/codegen.ts"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "next": "14.1.0",
@@ -33,5 +34,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
