--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "yarn run codegen && next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "codegen": "graphql-codegen --config ./lib/codegen.ts"
@@ -14,6 +15,7 @@
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "next": "14.1.0",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
